istio/gateway.yaml
apiVersion: networking.istio.io/v1beta1
kind: Gateway
metadata:
  name: tracing-gateway
spec:
  selector:
    istio: ingressgateway
  servers:
    - port:
        number: 80
        name: http
        protocol: HTTP
      hosts:
        - "*"
    - port:
        number: 8080
        name: websocket
        protocol: HTTP
      hosts:
        - "*"
    - port:
        number: 9090
        name: grpc
        protocol: HTTP2
      hosts:
        - "*"
---
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: tracing-virtual-service
spec:
  hosts:
    - "*"
  gateways:
    - tracing-gateway
  http:
    - match:
        - uri:
            prefix: "/operations"
      route:
        - destination:
            host: operation-service
            port:
              number: 8080
    - match:
        - uri:
            prefix: "/ws/operations"
      route:
        - destination:
            host: operation-service
            port:
              number: 8080
    - match:
        - uri:
            prefix: "/inventory"
      route:
        - destination:
            host: inventory-service
            port:
              number: 8081
    - match:
        - uri:
            prefix: "/com.example.proto.InventoryService"
      route:
        - destination:
            host: inventory-service
            port:
              number: 9091
      headers:
        request:
          add:
            x-envoy-upstream-rq-timeout-ms: "5000"
